<resources>
    <!-- App title and fragment titles -->
    <string name="app_name">GistsList</string>

    <!-- Main gist list fragment -->
    <string name="add_button_text">Load gists</string>
    <string name="not_found">Not found</string>
    <string name="menu_action_search">Search</string>

    <!-- Text item view -->
    <string name="login_title">Name:</string>
    <string name="description_title">Description:</string>

    <!-- Gist info fragment -->
    <string name="gist_type_header">Type:</string>
    <string name="gist_language_header">Language:</string>
    <string name="gist_url_header">Url to gist:</string>
    <string name="gist_description_header">Description:</string>
    <string name="gist_content_header">Content:</string>
</resources>