<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/gist_info_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="100dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/indent_small"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            app:layout_constraintBottom_toBottomOf="parent">


            <ImageView
                android:id="@+id/gist_info_author_avatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/black"/>

            <TextView
                android:id="@+id/gist_info_author_login"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/gist_info_author_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/indent_small"
                android:layout_marginEnd="@dimen/indent_small"
                android:text="@string/not_found"
                android:textSize="@dimen/heading_size_2"/>

            <TextView
                android:id="@+id/gist_info_title"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gist_info_author_avatar"
                android:layout_marginTop="@dimen/indent_medium"
                android:text="@string/not_found"
                android:textSize="@dimen/heading_size_1"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/gist_info_type_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/gist_type_header"
                android:textSize="@dimen/heading_size_2"
                android:paddingTop="@dimen/indent_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/gist_info_language_header"
                app:layout_constraintTop_toBottomOf="@id/gist_info_title"
                app:layout_constraintBottom_toTopOf="@id/gist_info_type"
                app:layout_constraintHorizontal_weight="0.5"/>

            <TextView
                android:id="@+id/gist_info_type"
                android:paddingTop="@dimen/indent_small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/not_found"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gist_info_type_header"
                app:layout_constraintEnd_toStartOf="@+id/gist_info_language"
                app:layout_constraintHorizontal_weight="0.5"/>

            <TextView
                android:id="@+id/gist_info_language_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/gist_language_header"
                android:textSize="@dimen/heading_size_2"
                android:paddingTop="@dimen/indent_small"
                app:layout_constraintStart_toEndOf="@id/gist_info_type_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gist_info_title"
                app:layout_constraintBottom_toTopOf="@id/gist_info_language"
                app:layout_constraintHorizontal_weight="0.5"/>

            <TextView
                android:id="@+id/gist_info_language"
                android:paddingTop="@dimen/indent_small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/not_found"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toEndOf="@id/gist_info_type_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gist_info_language_header"
                app:layout_constraintHorizontal_weight="0.5"/>

            <TextView
                android:id="@+id/gist_info_url_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gist_url_header"
                android:textSize="@dimen/heading_size_2"
                android:paddingTop="@dimen/indent_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gist_info_type"
                app:layout_constraintBottom_toTopOf="@id/gist_info_url"/>

            <TextView
                android:id="@+id/gist_info_url"
                android:paddingTop="@dimen/indent_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_found"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gist_info_url_header"/>

            <TextView
                android:id="@+id/gist_info_description_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gist_description_header"
                android:textSize="@dimen/heading_size_2"
                android:paddingTop="@dimen/indent_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gist_info_url"
                app:layout_constraintBottom_toTopOf="@id/gist_info_description"/>

            <TextView
                android:id="@+id/gist_info_description"
                android:paddingTop="@dimen/indent_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_found"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gist_info_description_header"/>

            <TextView
                android:id="@+id/gist_info_content_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gist_content_header"
                android:textSize="@dimen/heading_size_2"
                android:paddingTop="@dimen/indent_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gist_info_description"
                app:layout_constraintBottom_toTopOf="@id/gist_info_content"/>

            <TextView
                android:id="@+id/gist_info_content"
                android:paddingTop="@dimen/indent_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_found"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gist_info_content_header"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/gist_info_group_all_views"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="gist_info_author_avatar,
                gist_info_author_login,gist_info_title,gist_info_type_header,gist_info_type,
                gist_info_language_header,gist_info_language,gist_info_url_header,gist_info_url,
                gist_info_description_header,gist_info_description,gist_info_content_header,
                gist_info_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>